--- a/css/resources.css
+++ b/css/resources.css
@@ -154,6 +154,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: -40px; /* Counter-balance the top logo */
 }
 
 .home_page-title h1 {
